fix bugs on firefox

--- a/yamp/static/less/sidebar.less
+++ b/yamp/static/less/sidebar.less
@@ -175,6 +175,7 @@ div.sidebar {
 
       &:hover {
         color: #ffffff;
+        cursor: pointer;
       }
 
       i {
